--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^8.2.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.4",
@@ -22,7 +23,9 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-device-info": "^10.0.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-mmkv": "^2.4.3",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
