--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/netinfo": "^8.2.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -25,6 +26,7 @@
     "react-native-ble-plx": "^2.0.3",
     "react-native-device-info": "^10.0.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-mmkv": "^2.4.3",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
